[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ms-chem-utils"
version = "0.1.0"
description = "Mass-spec chemistry utilities: formulas, RDKit structure checks, PubChem helpers, spectral scoring"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "numpy",
  "requests",
  "rdkit",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "pytest-cov>=5.0",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]